[package]
name = "mextron"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
axum = "0.6.18"
clap = { version = "4.3.1", features = ["derive"] }
env_logger = "0.10.1"
fs_extra = "1.3.0"
hotwatch = "0.5.0"
log = "0.4.20"
pulldown-cmark = "0.9.3"
slugify = "0.1.0"
tokio = { version =  "1.28.2", features = ["full"] }
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
walkdir = "2.3.3"
