[package]
name = "mextron"
version = "0.9.0"
edition = "2021"
description = "Blazing fast static site generator"
authors = ["Soumyadip Moni <avater.clasher@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/AvaterClasher/Mextron"
keywords = ["static", "site", "generator", "html",]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
async-recursion = "1.0.5"
axum = "0.6.18"
chrono = "0.4.31"
clap = { version = "4.3.1", features = ["derive"] }
config = "0.13.3"
directories = "5.0.1"
fs_extra = "1.3.0"
futures-util = "0.3.29"
grass = "0.13.1"
handlebars = "4.5.0"
html-minifier = "4.0.0"
md5 = "0.7.0"
minify-html = "0.11.1"
notify = "6.0.1"
notify-debouncer-mini = "0.3.0"
owo-colors = "3.5.0"
pulldown-cmark = "0.9.3"
rayon = "1.8.0"
regex = "1.10.2"
reqwest = {version = "0.11.22", features = ["json","blocking"] }
serde = "1.0.193"
serde_json = "1.0.108"
serde_yaml = "0.9.27"
sitewriter = "1.0.3"
slugify = "0.1.0"
tokio = { version =  "1.28.2", features = ["full"] }
tokio-tungstenite = "0.20.1"
toml = "0.8.8"
tower-http = { version = "0.4.0", features = ["fs", "trace"] }
walkdir = "2.3.3"
